--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,7 +160,7 @@ commands:
 jobs:
     build:
         docker:
-            - image: circleci/node:16.5.1-stretch
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -168,7 +168,7 @@ jobs:
 
     release_storybook:
         docker:
-            - image: circleci/node:16.5.1-stretch
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -188,7 +188,7 @@ jobs:
 
     release_staging:
         docker:
-            - image: circleci/node:16.5.1-stretch
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -203,7 +203,7 @@ jobs:
 
     release_production:
         docker:
-            - image: circleci/node:16.5.1-stretch
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -220,7 +220,7 @@ jobs:
 
     build_and_test:
         docker:
-            - image: circleci/node:16.5.1-stretch
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
