--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ commands:
                   command: echo $(find . ./packages/ -maxdepth 2 -name package.json -type f -exec md5sum {} \; | sort -n | md5sum | cut -d" " -f1) >> CACHE_KEY1
             - restore_cache:
                   keys:
-                      - node-v{{ .Environment.CACHE_VERSION }}-{{ checksum "CACHE_KEY1" }}
+                      - node-v{{ .Environment.CACHE_VERSION }}-{{ checksum "CACHE_KEY1" }}-hehe
             - run:
                   name: 'Install npm packages'
                   command: |
@@ -60,7 +60,7 @@ commands:
                       fi
             - save_cache:
                   name: 'Saving node_modules cache'
-                  key: node-v{{ .Environment.CACHE_VERSION }}-{{ checksum "CACHE_KEY1" }}
+                  key: node-v{{ .Environment.CACHE_VERSION }}-{{ checksum "CACHE_KEY1" }}-hehe
                   paths:
                       # VERIFY_CACHE_FOLDERS_START (DO NOT REMOVE)
                       - 'node_modules'
