--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,7 +203,7 @@ jobs:
 
   release_staging:
     docker:
-      - image: circleci/node:14.17.1-stretch
+      - image: cimg/node:16.15.1
     steps:
       - git_checkout_from_cache
       - npm_install_from_cache
@@ -222,7 +222,7 @@ jobs:
 
   release_production:
     docker:
-      - image: circleci/node:14.17.1-stretch
+      - image: cimg/node:16.15.1
     steps:
       - git_checkout_from_cache
       - npm_install_from_cache
@@ -263,7 +263,7 @@ jobs:
 
   build_and_test:
     docker:
-      - image: circleci/node:14.17.1-stretch
+      - image: cimg/node:16.15.1
     steps:
       - git_checkout_from_cache
       - npm_install_from_cache
