--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,20 +58,20 @@ commands:
                   key: node-v{{ .Environment.CACHE_VERSION }}-{{ checksum "CACHE_KEY1" }}
                   paths:
                       # VERIFY_CACHE_FOLDERS_START (DO NOT REMOVE)
-                      node_modules
-                      packages/account/node_modules
-                      packages/appstore/node_modules
-                      packages/bot-skeleton/node_modules
-                      packages/bot-web-ui/node_modules
-                      packages/cashier/node_modules
-                      packages/components/node_modules
-                      packages/core/node_modules
-                      packages/cfd/node_modules
-                      packages/indicators/node_modules
-                      packages/p2p/node_modules
-                      packages/shared/node_modules
-                      packages/trader/node_modules
-                      packages/translations/node_modules
+                      - 'node_modules'
+                      - 'packages/account/node_modules'
+                      - 'packages/appstore/node_modules'
+                      - 'packages/bot-skeleton/node_modules'
+                      - 'packages/bot-web-ui/node_modules'
+                      - 'packages/cashier/node_modules'
+                      - 'packages/components/node_modules'
+                      - 'packages/core/node_modules'
+                      - 'packages/cfd/node_modules'
+                      - 'packages/indicators/node_modules'
+                      - 'packages/p2p/node_modules'
+                      - 'packages/shared/node_modules'
+                      - 'packages/trader/node_modules'
+                      - 'packages/translations/node_modules'
                       # VERIFY_CACHE_FOLDERS_END (DO NOT REMOVE)
 
     build:
@@ -137,45 +137,45 @@ commands:
                       echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
                       docker push ${DOCKHUB_ORGANISATION}/<< parameters.docker_image_name >>
 
-  k8s_deploy:
-    description: "Deploy to k8s cluster"
-    parameters:
-      k8s_namespace:
-        type: string
-        default: "deriv-app-staging"
-      k8s_service:
-        type: string
-        default: "deriv-app"
-    steps:
-      - k8s/install-kubectl
-      - run:
-          name: Deploying to k8s cluster to namespace << parameters.k8s_namespace >>
-          command: |
-            TAG=${CIRCLE_TAG:-$CIRCLE_SHA1}
-            export NAMESPACE=<< parameters.k8s_namespace >>
-            git clone https://github.com/binary-com/devops-ci-scripts
-            cd devops-ci-scripts/k8s-build_tools
-            echo $CA_CRT | base64 --decode > ca.crt
-            ./release.sh << parameters.k8s_service >> ${TAG}
+    k8s_deploy:
+        description: 'Deploy to k8s cluster'
+        parameters:
+            k8s_namespace:
+                type: string
+                default: 'deriv-app-staging'
+            k8s_service:
+                type: string
+                default: 'deriv-app'
+        steps:
+            - k8s/install-kubectl
+            - run:
+                  name: Deploying to k8s cluster to namespace << parameters.k8s_namespace >>
+                  command: |
+                      TAG=${CIRCLE_TAG:-$CIRCLE_SHA1}
+                      export NAMESPACE=<< parameters.k8s_namespace >>
+                      git clone https://github.com/binary-com/devops-ci-scripts
+                      cd devops-ci-scripts/k8s-build_tools
+                      echo $CA_CRT | base64 --decode > ca.crt
+                      ./release.sh << parameters.k8s_service >> ${TAG}
 
-  publish_to_pages_staging:
-    description: "Publish to cloudflare pages"
-    steps:
-      - run:
-          name: "Publish to cloudflare pages (staging)"
-          command: cd packages/core && npx wrangler pages publish dist/ --project-name=deriv-app-pages --branch=staging
+    publish_to_pages_staging:
+        description: 'Publish to cloudflare pages'
+        steps:
+            - run:
+                  name: 'Publish to cloudflare pages (staging)'
+                  command: cd packages/core && npx wrangler pages publish dist/ --project-name=deriv-app-pages --branch=staging
 
-  publish_to_pages_production:
-    description: "Publish to cloudflare pages"
-    steps:
-      - run:
-          name: "Publish to cloudflare pages (production)"
-          command: cd packages/core && npx wrangler pages publish dist/ --project-name=deriv-app-pages --branch=main
+    publish_to_pages_production:
+        description: 'Publish to cloudflare pages'
+        steps:
+            - run:
+                  name: 'Publish to cloudflare pages (production)'
+                  command: cd packages/core && npx wrangler pages publish dist/ --project-name=deriv-app-pages --branch=main
 
 jobs:
     build:
         docker:
-            - image: cimg/node:16.15.1
+            - image: circleci/node:14.17.1-stretch
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -183,7 +183,7 @@ jobs:
 
     release_storybook:
         docker:
-            - image: cimg/node:16.15.1
+            - image: circleci/node:14.17.1-stretch
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -201,77 +201,77 @@ jobs:
         environment:
             NODE_ENV: staging
 
-  release_staging:
-    docker:
-      - image: cimg/node:16.15.1
-    steps:
-      - git_checkout_from_cache
-      - npm_install_from_cache
-      - build
-      - versioning:
-          version_name: staging
-      - persist_to_workspace:
-          root: packages
-          paths:
-            - core
-      - docker_build_push
-      - k8s_deploy
-      - notify_slack
-    environment:
-      NODE_ENV: staging
+    release_staging:
+        docker:
+            - image: circleci/node:14.17.1-stretch
+        steps:
+            - git_checkout_from_cache
+            - npm_install_from_cache
+            - build
+            - versioning:
+                  version_name: staging
+            - persist_to_workspace:
+                  root: packages
+                  paths:
+                      - core
+            - docker_build_push
+            - k8s_deploy
+            - notify_slack
+        environment:
+            NODE_ENV: staging
 
-  release_production:
-    docker:
-      - image: cimg/node:16.15.1
-    steps:
-      - git_checkout_from_cache
-      - npm_install_from_cache
-      - build
-      - versioning:
-          version_name: production
-      - persist_to_workspace:
-          root: packages
-          paths:
-            - core
-      - docker_build_push:
-          docker_image_latest_tag: latest
-      - k8s_deploy:
-          k8s_namespace: "deriv-app-production"
-      - notify_slack
-    environment:
-      NODE_ENV: staging
+    release_production:
+        docker:
+            - image: circleci/node:14.17.1-stretch
+        steps:
+            - git_checkout_from_cache
+            - npm_install_from_cache
+            - build
+            - versioning:
+                  version_name: production
+            - persist_to_workspace:
+                  root: packages
+                  paths:
+                      - core
+            - docker_build_push:
+                  docker_image_latest_tag: latest
+            - k8s_deploy:
+                  k8s_namespace: 'deriv-app-production'
+            - notify_slack
+        environment:
+            NODE_ENV: staging
 
-  publish_cloudflare_staging:
-    docker:
-      - image: circleci/node:16.13.1-stretch
-    steps:
-      - attach_workspace:
-          at: packages
-      - publish_to_pages_staging
-    environment:
-      NODE_ENV: staging
+    publish_cloudflare_staging:
+        docker:
+            - image: circleci/node:16.13.1-stretch
+        steps:
+            - attach_workspace:
+                  at: packages
+            - publish_to_pages_staging
+        environment:
+            NODE_ENV: staging
 
-  publish_cloudflare_production:
-    docker:
-      - image: circleci/node:16.13.1-stretch
-    steps:
-      - attach_workspace:
-          at: packages
-      - publish_to_pages_production
-    environment:
-      NODE_ENV: staging
+    publish_cloudflare_production:
+        docker:
+            - image: circleci/node:16.13.1-stretch
+        steps:
+            - attach_workspace:
+                  at: packages
+            - publish_to_pages_production
+        environment:
+            NODE_ENV: staging
 
-  build_and_test:
-    docker:
-      - image: cimg/node:16.15.1
-    steps:
-      - git_checkout_from_cache
-      - npm_install_from_cache
-      - build
-      - run:
-          name: "Run tests"
-          no_output_timeout: 30m
-          command: npm test
+    build_and_test:
+        docker:
+            - image: circleci/node:14.17.1-stretch
+        steps:
+            - git_checkout_from_cache
+            - npm_install_from_cache
+            - build
+            - run:
+                  name: 'Run tests'
+                  no_output_timeout: 30m
+                  command: npm test
 
 workflows:
     release_storybook:
@@ -284,37 +284,37 @@ workflows:
                       tags:
                           only: /^storybook.*/
 
-  release_staging:
-    jobs:
-      - release_staging:
-          context: binary-frontend-artifact-upload
-          filters:
-            branches:
-              only: /^master$/
-      - publish_cloudflare_staging:
-          requires:
-            - release_staging
-          filters:
-            branches:
-              only: /^master$/
+    release_staging:
+        jobs:
+            - release_staging:
+                  context: binary-frontend-artifact-upload
+                  filters:
+                      branches:
+                          only: /^master$/
+            - publish_cloudflare_staging:
+                  requires:
+                      - release_staging
+                  filters:
+                      branches:
+                          only: /^master$/
 
-  release_production:
-    jobs:
-      - release_production:
-          context: binary-frontend-artifact-upload
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^production.*/
-      - publish_cloudflare_production:
-          requires:
-            - release_production
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^production.*/
+    release_production:
+        jobs:
+            - release_production:
+                  context: binary-frontend-artifact-upload
+                  filters:
+                      branches:
+                          ignore: /.*/
+                      tags:
+                          only: /^production.*/
+            - publish_cloudflare_production:
+                  requires:
+                      - release_production
+                  filters:
+                      branches:
+                          ignore: /.*/
+                      tags:
+                          only: /^production.*/
 
     test:
         jobs:
