--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,20 +58,20 @@ commands:
                   key: node-v{{ .Environment.CACHE_VERSION }}-{{ checksum "CACHE_KEY1" }}
                   paths:
                       # VERIFY_CACHE_FOLDERS_START (DO NOT REMOVE)
-                      - 'node_modules'
-                      - 'packages/account/node_modules'
-                      - 'packages/appstore/node_modules'
-                      - 'packages/bot-skeleton/node_modules'
-                      - 'packages/bot-web-ui/node_modules'
-                      - 'packages/cashier/node_modules'
-                      - 'packages/components/node_modules'
-                      - 'packages/core/node_modules'
-                      - 'packages/cfd/node_modules'
-                      - 'packages/indicators/node_modules'
-                      - 'packages/p2p/node_modules'
-                      - 'packages/shared/node_modules'
-                      - 'packages/trader/node_modules'
-                      - 'packages/translations/node_modules'
+                      node_modules
+                      packages/account/node_modules
+                      packages/appstore/node_modules
+                      packages/bot-skeleton/node_modules
+                      packages/bot-web-ui/node_modules
+                      packages/cashier/node_modules
+                      packages/components/node_modules
+                      packages/core/node_modules
+                      packages/cfd/node_modules
+                      packages/indicators/node_modules
+                      packages/p2p/node_modules
+                      packages/shared/node_modules
+                      packages/trader/node_modules
+                      packages/translations/node_modules
                       # VERIFY_CACHE_FOLDERS_END (DO NOT REMOVE)
 
     build:
