--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,7 @@ commands:
 jobs:
     build:
         docker:
-            - image: circleci/node:16.15.1
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -183,7 +183,7 @@ jobs:
 
     release_storybook:
         docker:
-            - image: circleci/node:16.15.1
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -203,7 +203,7 @@ jobs:
 
     release_staging:
         docker:
-            - image: circleci/node:16.15.1
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -222,7 +222,7 @@ jobs:
 
     release_production:
         docker:
-            - image: circleci/node:16.15.1
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
@@ -263,7 +263,7 @@ jobs:
 
     build_and_test:
         docker:
-            - image: circleci/node:16.15.1
+            - image: cimg/node:16.15.1
         steps:
             - git_checkout_from_cache
             - npm_install_from_cache
