--- a/.github/workflows/generate_and_push_deriv_api_types.yml
+++ b/.github/workflows/generate_and_push_deriv_api_types.yml
@@ -1,8 +1,8 @@
 name: Generate and push @deriv/api-types
 on:
-    workflow_dispatch:
-    schedule:
-        - cron: '30 * * * *'
+  workflow_dispatch:
+  schedule:
+    - cron: "30 * * * *"
 
 jobs:
   generate_and_push_deriv_api_types:
